<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".SecondPage">

    <TextView
        android:id="@+id/fname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/firstname_str"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:paddingTop="10sp"
        app:layout_constraintEnd_toStartOf="@+id/firstname"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/fname_str"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fname"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lastname_str"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:paddingTop="50sp"
        app:layout_constraintEnd_toStartOf="@+id/firstname"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/lname_str"
        app:layout_constraintTop_toBottomOf="@id/fname"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lname"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/agee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/age_str"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:paddingTop="90sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toStartOf="@+id/firstname"
        tools:ignore="MissingConstraints"/>
    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/age_hint"
        app:layout_constraintTop_toBottomOf="@id/lname"
        app:layout_constraintStart_toEndOf="@+id/agee"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/age"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_str"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintEnd_toStartOf="@+id/gender"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderM_str"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintEnd_toStartOf="@+id/male"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderf_str"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintEnd_toStartOf="@+id/female"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/about_heading_string"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:textSize="20sp"
        android:id="@+id/abt"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="About"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:minLines="3"
        android:maxLines="6"
        android:gravity="start|top"
        app:layout_constraintTop_toBottomOf="@+id/abt"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Department"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/about"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/it"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:orientation="horizontal"
        android:text="IT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/about"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/cse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:orientation="horizontal"
        android:text="CSE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/about"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/ece"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="290dp"
        android:orientation="horizontal"
        android:text="ECE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/about"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/move2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_marginStart="80sp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@+id/ece"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@id/move2"
        app:layout_constraintTop_toBottomOf="@+id/cse"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>